# rizclone

./: .env.example  .gitignore  README.md  app.py  experimental.ipynb  pyproject.toml  requirements.txt
evaluation/: eval.py
implementation/: chat.py  ingest.py  preprocess.py  user_details.json  visualize.py
preprocessed_db/: chroma.sqlite3
