[project]
name = "rizclone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "gradio>=6.5.1",
    "huggingface-hub>=1.3.5",
    "langchain>=1.2.7",
    "litellm>=1.81.6",
    "notebook>=7.5.3",
    "numpy<2.4",
    "openai>=2.16.0",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "pywidgets>=0.0.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.2",
]
